--- a/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
@@ -13,4 +13,6 @@
     <x:Double x:Key="SmallFontSize">12</x:Double>
     <x:Double x:Key="MediumFontSize">15</x:Double>
     <x:Double x:Key="LargeFontSize">18</x:Double>
+    <Thickness x:Key="RevealThinkness">0.7</Thickness>
+    <Thickness x:Key="SettingsButtonMargin">8</Thickness>
 </ResourceDictionary>
