--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -52,12 +52,10 @@
                 Style="{StaticResource FabStyle}">
                 <Grid Width="60" Height="60">
                     <cc:EllipseShadowControl
-                        Width="46"
-                        Height="46"
-                        ForeColor="White"
-                        Radius="21" />
+                        Style="{StaticResource MainFabStyle}" />
                     <FontIcon FontFamily="Segoe MDL2 Assets" 
                               Foreground="#FF333333"
+                              FontSize="{StaticResource MediumFontSize}"
                               Glyph="&#xE8EE;" />
                 </Grid>
             </Button>
@@ -72,16 +70,47 @@
                 Margin="12,0,0,0" Height="28"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
                 <Button
+                    x:Name="DownloadEntryBtn"
+                    Grid.Column="3"
+                    Height="{StaticResource MainButtonSize}"
+                    ToolTipService.ToolTip="Downloads"
+                    Margin="0"
+                    Padding="0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    fcu:Style="{StaticResource MainButtonStyle}"
+                    cu:Style="{StaticResource MainButtonCompatStyle}"
+                    Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}">
+                    <StackPanel Orientation="Horizontal">
+                        <FontIcon
+                            Margin="4"
+                            FontFamily="Segoe MDL2 Assets"
+                            Foreground="{StaticResource MainBarIconColorBrush}"
+                            Glyph="&#xE118;"
+                            FontSize="{StaticResource MediumFontSize}"/>
+                        <Border Margin="8,8,8,8" Padding="4" 
+                                Background="{StaticResource MyerSplashThemeColorBrush}">
+                            <TextBlock 
+                                FontWeight="Bold" 
+                                Text="12"
+                                FontSize="{StaticResource SmallFontSize}"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"/>
+                        </Border>
+                    </StackPanel>
+                </Button>
+                <Button
                     x:Name="SearchBtn"
                     Grid.Column="2"
+                    ToolTipService.ToolTip="Search"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
                     Margin="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    BorderThickness="0"
-                    Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}"
-                    Style="{StaticResource ListButtonStyle}">
+                    fcu:Style="{StaticResource MainButtonStyle}"
+                    cu:Style="{StaticResource MainButtonCompatStyle}"
+                    Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}">
                     <FontIcon
                         FontFamily="Segoe MDL2 Assets"
                         Foreground="{StaticResource MainBarIconColorBrush}"
@@ -94,136 +123,42 @@
                     </FontIcon>
                 </Button>
                 <Button
-                    x:Name="DownloadEntryBtn"
+                    x:Name="SettingBtn"
                     Grid.Column="3"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
                     Margin="0"
+                    ToolTipService.ToolTip="Settings"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    BorderThickness="0"
-                    Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
-                    Style="{StaticResource ListButtonStyle}">
+                    Command="{x:Bind MainVM.GoToSettingsCommand, Mode=OneWay}"
+                    fcu:Style="{StaticResource MainButtonStyle}"
+                    cu:Style="{StaticResource MainButtonCompatStyle}">
                     <FontIcon
                         FontFamily="Segoe MDL2 Assets"
+                        FontSize="{StaticResource MediumFontSize}"
                         Foreground="{StaticResource MainBarIconColorBrush}"
-                        Glyph="&#xE118;"
-                        FontSize="{StaticResource MediumFontSize}"/>
+                        Glyph="&#xE713;" />
                 </Button>
                 <Button
                     x:Name="MoreBtn"
                     Grid.Column="3"
+                    ToolTipService.ToolTip="About"
                     Width="{StaticResource MainButtonSize}"
                     Height="{StaticResource MainButtonSize}"
                     Margin="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    BorderThickness="0"
-                    RequestedTheme="Dark"
-                    Style="{StaticResource ListButtonStyle}">
+                    Command="{x:Bind MainVM.GoToAboutCommand, Mode=OneWay}"
+                    fcu:Style="{StaticResource MainButtonStyle}"
+                    cu:Style="{StaticResource MainButtonCompatStyle}">
                     <FontIcon
                         FontFamily="Segoe MDL2 Assets"
                         FontSize="{StaticResource MediumFontSize}"
                         Foreground="{StaticResource MainBarIconColorBrush}"
                         Glyph="" />
-                    <Button.Flyout>
-                        <MenuFlyout Placement="Left">
-                            <MenuFlyoutItem Text="Settings" Command="{x:Bind MainVM.GoToSettingsCommand, Mode=OneWay}"/>
-                            <MenuFlyoutItem Text="About" Command="{x:Bind MainVM.GoToAboutCommand, Mode=OneWay}"/>
-                        </MenuFlyout>
-                    </Button.Flyout>
-                    <!--<Button.ContextFlyout>
-                        
-                    </Button.ContextFlyout>-->
                 </Button>
             </StackPanel>
-            <!--<Grid
-                 x:Name="TitleStack"
-                 Margin="16"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top">
-                 <Grid.ColumnDefinitions>
-                 <ColumnDefinition Width="60" />
-                 <ColumnDefinition Width="Auto" />
-                 <ColumnDefinition Width="60" />
-                 <ColumnDefinition x:Name="C3" Width="60" />
-                 </Grid.ColumnDefinitions>
-                 <Border
-                 x:Name="BlurBorder"
-                 Grid.ColumnSpan="5"
-                 cu:Background="{StaticResource AppBackgroundBrushLittleDark}"
-                 fcu:Background="{StaticResource CustomAcrylicInAppBrush}" />
-                 <Border x:Name="HamBtnBorder" VerticalAlignment="Center">
-                 <uc:HamburgerButton
-                 x:Name="HamBtn"
-                 Width="{StaticResource PosterHeight}"
-                 Height="{StaticResource PosterHeight}"
-                 Margin="0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top"
-                 Command="{x:Bind MainVM.OpenDrawerCommand, Mode=OneWay}" />
-                 </Border>
-                 <Button
-                 x:Name="TitleBtn"
-                 Grid.Column="1"
-                 Height="{StaticResource PosterHeight}"
-                 Margin="0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Top"
-                 BorderThickness="0"
-                 Style="{StaticResource ListButtonStyle}"
-                 Tapped="StackPanel_Tapped">
-                 <TextBlock
-                 x:Name="TitleTB"
-                 Margin="12,4"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"
-                 CacheMode="BitmapCache"
-                 FontSize="25"
-                 FontWeight="Bold"
-                 Foreground="White"
-                 Tapped="StackPanel_Tapped"
-                 Text="{x:Bind MainVM.SelectedTitle, Mode=OneWay, FallbackValue=#NEW}"
-                 TextTrimming="CharacterEllipsis" />
-                 </Button>
-                 <Button
-                 x:Name="SearchBtn"
-                 Grid.Column="2"
-                 Width="{StaticResource PosterHeight}"
-                 Height="{StaticResource PosterHeight}"
-                 Margin="0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"
-                 BorderThickness="0"
-                 Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}"
-                 Style="{StaticResource ListButtonStyle}">
-                 <FontIcon
-                 FontFamily="Segoe MDL2 Assets"
-                 Foreground="{StaticResource MainBarIconColorBrush}"
-                 Glyph="&#xE094;"
-                 RenderTransformOrigin="0.5,0.5">
-                 <FontIcon.RenderTransform>
-                 <CompositeTransform ScaleX="-1" />
-                 </FontIcon.RenderTransform>
-                 </FontIcon>
-                 </Button>
-                 <Button
-                 x:Name="DownloadEntryBtn"
-                 Grid.Column="3"
-                 Width="{StaticResource PosterHeight}"
-                 Height="{StaticResource PosterHeight}"
-                 Margin="0"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"
-                 BorderThickness="0"
-                 Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
-                 Style="{StaticResource ListButtonStyle}">
-                 <FontIcon
-                 FontFamily="Segoe MDL2 Assets"
-                 Foreground="{StaticResource MainBarIconColorBrush}"
-                 Glyph="&#xE118;" />
-                 </Button>
-                 </Grid>-->
         </Grid>
         <uc:PhotoDetailControl
             x:Name="DetailControl"
