--- a/MyerSplash/View/Uc/AboutControl.xaml
+++ b/MyerSplash/View/Uc/AboutControl.xaml
@@ -26,7 +26,9 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Stretch"
             Click="CloseBtn_Click"
-            Style="{StaticResource ListButtonStyle}" Margin="12,0,0,0">
+            fcu:Style="{StaticResource MainButtonStyle}"
+            cu:Style="{StaticResource MainButtonCompatStyle}"
+            Margin="12,0,0,0">
             <FontIcon Style="{StaticResource CloseIconStyle}" FontSize="12" />
         </Button>
         <Grid Grid.Row="1">
@@ -105,28 +107,32 @@
                             HorizontalAlignment="Center"
                             Background="{x:Null}"
                             Command="{x:Bind AboutVM.FeedbackCommand, Mode=OneWay}"
-                            Style="{StaticResource AboutImageButtonStyle}">
+                            fcu:Style="{StaticResource MainButtonStyle}"
+                            cu:Style="{StaticResource MainButtonCompatStyle}">
                             <Image Source="ms-appx:///Assets/Icon/mail.png" Style="{StaticResource AboutImageStyle}" />
                         </Button>
                         <Button
                             HorizontalAlignment="Center"
                             Background="{x:Null}"
                             Command="{x:Bind AboutVM.VisitGitHubCommand, Mode=OneWay}"
-                            Style="{StaticResource AboutImageButtonStyle}">
+                            fcu:Style="{StaticResource MainButtonStyle}"
+                            cu:Style="{StaticResource MainButtonCompatStyle}">
                             <Image Source="ms-appx:///Assets/Icon/github.png" Style="{StaticResource AboutImageStyle}" />
                         </Button>
                         <Button
                             HorizontalAlignment="Center"
                             Background="{x:Null}"
                             Command="{x:Bind AboutVM.VisitTwitterCommand, Mode=OneWay}"
-                            Style="{StaticResource AboutImageButtonStyle}">
+                            fcu:Style="{StaticResource MainButtonStyle}"
+                            cu:Style="{StaticResource MainButtonCompatStyle}">
                             <Image Source="ms-appx:///Assets/Icon/twitter.png" Style="{StaticResource AboutImageStyle}" />
                         </Button>
                         <Button
                             HorizontalAlignment="Center"
                             Background="{x:Null}"
                             Command="{x:Bind AboutVM.VisitWeiboCommand, Mode=OneWay}"
-                            Style="{StaticResource AboutImageButtonStyle}">
+                            fcu:Style="{StaticResource MainButtonStyle}"
+                            cu:Style="{StaticResource MainButtonCompatStyle}">
                             <Image Source="ms-appx:///Assets/Icon/weibo.png" Style="{StaticResource AboutImageStyle}" />
                         </Button>
                     </StackPanel>
@@ -136,7 +142,8 @@
                         HorizontalAlignment="Center"
                         Background="{x:Null}"
                         Command="{x:Bind AboutVM.RateCommand, Mode=OneWay}"
-                        Style="{StaticResource ListButtonStyle}">
+                        fcu:Style="{StaticResource MainButtonStyle}"
+                        cu:Style="{StaticResource MainButtonCompatStyle}">
                         <TextBlock Style="{StaticResource SubContentTextBlockStyle}" Text="Rate this app" />
                     </Button>
                 </StackPanel>
