--- a/MyerSplash/View/Uc/ManageDownloadControl.xaml
+++ b/MyerSplash/View/Uc/ManageDownloadControl.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:attach="using:JP.Utils.Framework"
     xmlns:common="using:MyerSplash.Common"
+    xmlns:cc="using:MyerSplashCustomControl"
     xmlns:control="using:MyerSplashCustomControl"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -27,27 +28,27 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid x:Name="DummyTitleBar" Background="Transparent"/>
-        <StackPanel Orientation="Horizontal">
-            <Button
-                x:Name="CloseBtn"
-                Width="{StaticResource MainButtonSize}"
-                Height="{StaticResource MainButtonSize}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Stretch"
-                Click="CloseBtn_Click"
-                Style="{StaticResource ListButtonStyle}" Margin="12,0,0,0">
-                <FontIcon Style="{StaticResource CloseIconStyle}"
-                          FontSize="{StaticResource SmallFontSize}" />
-            </Button>
-            <TextBlock
-                Margin="12,0,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                FontSize="{StaticResource MediumFontSize}"
-                FontWeight="Bold"
-                Foreground="White"
-                Text="DOWNLOADS" />
-        </StackPanel>
+        <Button
+            x:Name="CloseBtn"
+            Width="{StaticResource MainButtonSize}"
+            Height="{StaticResource MainButtonSize}"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Stretch"
+            Click="CloseBtn_Click"
+            fcu:Style="{StaticResource MainButtonStyle}"
+            cu:Style="{StaticResource MainButtonCompatStyle}"
+            Margin="12,0,0,0">
+            <FontIcon Style="{StaticResource CloseIconStyle}"
+                      FontSize="{StaticResource SmallFontSize}" />
+        </Button>
+        <TextBlock
+            Margin="12,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="{StaticResource MediumFontSize}"
+            FontWeight="Bold"
+            Foreground="White"
+            Text="DOWNLOADS" />
         <control:AdaptiveGridView
             x:Name="ImageGridView"
             Grid.Row="1"
@@ -93,18 +94,12 @@
             Command="{x:Bind DownloadsVM.DeleteFABCommand, Mode=OneWay}"
             Style="{StaticResource FabStyle}">
             <Grid Width="60" Height="60">
-                <uc:EllipseShadowControl Radius="25" />
-                <Ellipse
-                    Width="50"
-                    Height="50"
-                    Fill="{StaticResource MyerSplashThemeColorBrush}" />
+                <cc:EllipseShadowControl Style="{StaticResource MainFabStyle}" />
                 <Grid>
-                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE10C;" />
-                    <Image
-                        x:Name="DiceIcon"
-                        Width="25"
-                        Source="ms-appx:///Assets/Icon/dice.png"
-                        Visibility="Collapsed" />
+                    <FontIcon FontFamily="Segoe MDL2 Assets" 
+                              Glyph="&#xE10C;"  
+                              Foreground="#FF333333"
+                              FontSize="{StaticResource MediumFontSize}"/>
                 </Grid>
             </Grid>
         </Button>
