--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -64,10 +64,25 @@
         <Grid x:Name="TitleGridContent"
               cu:Background="{StaticResource CustomAcrylicWindowBrush}"
               fcu:Background="{StaticResource SystemControlChromeLowAcrylicWindowBrush}" Padding="0,30,0,0">
-            <uc:MainNavigationControl 
+            <cc:TopNavigationControl 
+                Margin="12,0,0,0"
+                SliderBrush="White"
+                SelectedIndex="{x:Bind MainVM.SelectedIndex,Mode=TwoWay}"
                 HorizontalAlignment="Left" 
-                VerticalAlignment="Center"
-                Margin="12,0,0,0" Height="28"/>
+                VerticalAlignment="Center">
+                <x:String>NEW</x:String>
+                <x:String>FEATURED</x:String>
+                <x:String>RANDOM</x:String>
+                <cc:TopNavigationControl.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock 
+                            Text="{Binding}"
+                            Padding="12,4,12,4"
+                            FontWeight="Bold"/>
+                    </DataTemplate>
+                </cc:TopNavigationControl.ItemTemplate>
+            </cc:TopNavigationControl>
+
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
                 <Button
                     x:Name="DownloadEntryBtn"
