--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -102,7 +102,7 @@
                             Margin="12,0,0,0"
                             VerticalAlignment="Center"
                             Style="{StaticResource SettingItemButtonContentStyle}"
-                            Text="Enable scale animation when pointer enters" />
+                            Text="Enable scale animation on pointer entering" />
                         <ToggleSwitch
                             Grid.Column="1"
                             IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableScaleAnimation, Mode=TwoWay}"
@@ -120,7 +120,7 @@
                             Margin="12,0,0,0"
                             VerticalAlignment="Center"
                             Style="{StaticResource SettingItemButtonContentStyle}"
-                            Text="Enable today's recommendation" />
+                            Text="Enable Today highlight" />
                         <ToggleSwitch
                             Grid.Column="1"
                             IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableTodayRecommendation, Mode=TwoWay}"
@@ -137,7 +137,7 @@
                         HorizontalContentAlignment="Left">
                         <TextBlock
                             Style="{StaticResource SettingItemButtonContentStyle}"
-                            Text="Open folder that wallpapers are saved into" />
+                            Text="Open the folder wallpapers are saved into" />
                     </Button>
                     <StackPanel x:Name="AutoChangeSP" Margin="0">
                         <StackPanel Orientation="Horizontal" Margin="0,12,0,0">
