--- a/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/DimentionDictionary.xaml
@@ -8,6 +8,7 @@
     <Thickness x:Key="PhoneBorderThickness">2.5</Thickness>
     <Thickness x:Key="ComboBoxItemPadding">11,5,11,7</Thickness>
     <x:Double x:Key="MainButtonSize">40</x:Double>
+    <x:Double x:Key="ThumbRadius">3</x:Double>
     <x:Double x:Key="SetAsHeight">44</x:Double>
     <GridLength x:Key="SetAsGridHeight">44</GridLength>
     <x:Double x:Key="SmallFontSize">12</x:Double>
