--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -50,6 +50,7 @@
                 x:Name="RefreshBtn"
                 Grid.RowSpan="2"
                 Command="{x:Bind MainVM.RefreshCommand, Mode=OneWay}"
+                ToolTipService.ToolTip="Refresh"
                 Style="{StaticResource FabStyle}">
                 <Grid Width="60" Height="60">
                     <cc:EllipseShadowControl
