Fix ui glitch in download item template

--- a/MyerSplash/View/Uc/DownloadItemTemplate.xaml
+++ b/MyerSplash/View/Uc/DownloadItemTemplate.xaml
@@ -147,7 +147,7 @@
                     d:IsHidden="True">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
-                        <ColumnDefinition Width="52" />
+                        <ColumnDefinition Width="{StaticResource SetAsGridHeight}" />
                     </Grid.ColumnDefinitions>
                     <Border
                         x:Name="BackgrdBorder"
