--- a/MyerSplash/View/Uc/BackgroundHintDialog.xaml
+++ b/MyerSplash/View/Uc/BackgroundHintDialog.xaml
@@ -2,15 +2,17 @@
     x:Class="MyerSplash.View.Uc.BackgroundHintDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="350"
+    Width="{StaticResource DialogWidth}"
     Height="200"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
+    d:DesignHeight="200"
+    d:DesignWidth="{StaticResource DialogWidth}"
     mc:Ignorable="d">
-
-    <Grid Background="{StaticResource TitleBarDarkBrush}" CornerRadius="2">
+    <Grid Background="{StaticResource MyerSplashDarkColorBrush}"
+          CornerRadius="2">
         <StackPanel Margin="8">
             <TextBlock
                 Margin="12,12,0,0"
@@ -23,7 +25,7 @@
                 Margin="12"
                 FontSize="15"
                 Foreground="#CCFFFFFF"
-                Text="Change your wallpaper automatically in background every day. All wallpapers are from Unsplash and are well chosen by me, the developer of this app."
+                Text="Change your wallpaper automatically in background every day. All wallpapers are from Unsplash and are well chosen by myself :P"
                 TextWrapping="Wrap" />
         </StackPanel>
         <Button
@@ -32,7 +34,8 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Click="OKBtn_Click"
-            Style="{StaticResource ListButtonStyle}">
+            fcu:Style="{StaticResource MainButtonStyle}"
+            cu:Style="{StaticResource MainButtonCompatStyle}">
             <Border>
                 <TextBlock
                     Margin="12"
