--- a/MyerSplash/View/Uc/DeleteDialogControl.xaml
+++ b/MyerSplash/View/Uc/DeleteDialogControl.xaml
@@ -2,12 +2,14 @@
     x:Class="MyerSplash.View.Uc.DeleteDialogControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="350"
-    Height="300"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
+    Width="{StaticResource DialogWidth}"
+    Height="360"
+    d:DesignHeight="360"
+    d:DesignWidth="{StaticResource DialogWidth}"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="OptionTextBlockStyle" TargetType="TextBlock">
@@ -33,29 +35,29 @@
             <Button
                 x:Name="DeleteDownloadingBtn"
                 HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Left"
                 Click="DeleteDownloadingBtn_Click"
-                Style="{StaticResource ListButtonStyle}">
-                <Border>
-                    <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete downloading items" />
-                </Border>
+                fcu:Style="{StaticResource MainButtonStyle}"
+                cu:Style="{StaticResource MainButtonCompatStyle}">
+                <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete downloading items" HorizontalAlignment="Left" />
             </Button>
             <Button
                 x:Name="DeleteDownloadedBtn"
                 HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Left"
                 Click="DeleteDownloadedBtn_Click"
-                Style="{StaticResource ListButtonStyle}">
-                <Border>
-                    <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete downloaded items" />
-                </Border>
+                fcu:Style="{StaticResource MainButtonStyle}"
+                cu:Style="{StaticResource MainButtonCompatStyle}">
+                <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete downloaded items" />
             </Button>
             <Button
                 x:Name="DeleteAllBtn"
                 HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Left"
                 Click="DeleteAllBtn_Click"
-                Style="{StaticResource ListButtonStyle}">
-                <Border>
-                    <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete failed items" />
-                </Border>
+                fcu:Style="{StaticResource MainButtonStyle}"
+                cu:Style="{StaticResource MainButtonCompatStyle}">
+                <TextBlock Style="{StaticResource OptionTextBlockStyle}" Text="Delete failed items" />
             </Button>
             <TextBlock
                 Margin="12"
@@ -71,7 +73,8 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Click="CancelBtn_Click"
-            Style="{StaticResource ListButtonStyle}">
+            fcu:Style="{StaticResource MainButtonStyle}"
+            cu:Style="{StaticResource MainButtonCompatStyle}">
             <Border>
                 <TextBlock
                     FontWeight="Bold"
