--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -98,7 +98,7 @@
                     VerticalAlignment="Center"
                     fcu:Style="{StaticResource MainButtonStyle}"
                     cu:Style="{StaticResource MainButtonCompatStyle}"
-                    Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}">
+                    Command="{x:Bind MainVM.PresentDownloadsCommand, Mode=OneWay}">
                     <FontIcon
                         FontFamily="Segoe MDL2 Assets"
                         Foreground="{StaticResource MainBarIconColorBrush}"
@@ -138,7 +138,7 @@
                     ToolTipService.ToolTip="Settings"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Command="{x:Bind MainVM.GoToSettingsCommand, Mode=OneWay}"
+                    Command="{x:Bind MainVM.PresentSettingsCommand, Mode=OneWay}"
                     fcu:Style="{StaticResource MainButtonStyle}"
                     cu:Style="{StaticResource MainButtonCompatStyle}">
                     <FontIcon
@@ -156,7 +156,7 @@
                     Margin="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Command="{x:Bind MainVM.GoToAboutCommand, Mode=OneWay}"
+                    Command="{x:Bind MainVM.PresentAboutCommand, Mode=OneWay}"
                     fcu:Style="{StaticResource MainButtonStyle}"
                     cu:Style="{StaticResource MainButtonCompatStyle}">
                     <FontIcon
@@ -180,20 +180,17 @@
             x:Name="DownloadsControl"
             Grid.RowSpan="2"
             d:IsHidden="True"
-            CloseCommand="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
-            OnShownChanged="OnShownChanged"
-            Shown="{x:Bind MainVM.ShowDownloadsUC, Mode=OneWay}" />
+            CloseCommand="{x:Bind MainVM.PresentDownloadsCommand, Mode=OneWay}"
+            Presented="{x:Bind MainVM.DownloadsPagePresented, Mode=OneWay}" />
         <uc:AboutControl
             x:Name="AboutUC"
             Grid.RowSpan="2"
             d:IsHidden="True"
-            OnShownChanged="OnShownChanged"
-            Shown="{x:Bind MainVM.ShowAboutUC, Mode=TwoWay}" />
+            Presented="{x:Bind MainVM.AboutPagePresented, Mode=TwoWay}" />
         <uc:SettingsControl
             x:Name="SettingsUC"
             Grid.RowSpan="2"
             d:IsHidden="True"
-            OnShownChanged="OnShownChanged"
-            Shown="{x:Bind MainVM.ShowSettingsUC, Mode=TwoWay}" />
+            Presented="{x:Bind MainVM.SettingsPagePresented, Mode=TwoWay}" />
     </Grid>
 </common:BindablePage>
