--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -180,16 +180,19 @@
             x:Name="DownloadsControl"
             Grid.RowSpan="2"
             d:IsHidden="True"
+            OnPresentedChanged="OnPresentedChanged"
             CloseCommand="{x:Bind MainVM.PresentDownloadsCommand, Mode=OneWay}"
             Presented="{x:Bind MainVM.DownloadsPagePresented, Mode=OneWay}" />
         <uc:AboutControl
             x:Name="AboutUC"
             Grid.RowSpan="2"
+            OnPresentedChanged="OnPresentedChanged"
             d:IsHidden="True"
             Presented="{x:Bind MainVM.AboutPagePresented, Mode=TwoWay}" />
         <uc:SettingsControl
             x:Name="SettingsUC"
             Grid.RowSpan="2"
+            OnPresentedChanged="OnPresentedChanged"
             d:IsHidden="True"
             Presented="{x:Bind MainVM.SettingsPagePresented, Mode=TwoWay}" />
     </Grid>
