--- a/MyerSplash/View/Uc/DownloadsListControl.xaml
+++ b/MyerSplash/View/Uc/DownloadsListControl.xaml
@@ -5,6 +5,7 @@
     xmlns:attach="using:JP.Utils.Framework"
     xmlns:common="using:MyerSplash.Common"
     xmlns:cc="using:MyerSplashCustomControl"
+    xmlns:adapter="using:MyerSplash.Adapter"
     xmlns:control="using:MyerSplashCustomControl"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -57,16 +58,17 @@
             IncrementalLoadingTrigger="Edge"
             ItemsSource="{x:Bind DownloadsVM.DownloadingImages, Mode=OneWay}"
             MinItemHeight="220"
-            ChoosingItemContainer="ImageGridView_ChoosingItemContainer"
             MinItemWidth="220"
             SelectionMode="None"
-            ContainerContentChanging="ImageGridView_ContainerContentChanging"
             ShowsScrollingPlaceholders="False">
             <control:AdaptiveGridView.ItemTemplate>
                 <DataTemplate x:DataType="model:DownloadItem">
                     <uc:DownloadItemTemplate />
                 </DataTemplate>
             </control:AdaptiveGridView.ItemTemplate>
+            <control:AdaptiveGridView.Adapter>
+                <adapter:DownloadItemAdatper/>
+            </control:AdaptiveGridView.Adapter>
             <control:AdaptiveGridView.ItemContainerStyle>
                 <Style TargetType="GridViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
